# dyn-ptr

./: Cargo.toml  README.md  rustfmt.toml
docs/: async.md
src/: impls.rs  lib.rs
tests/: basic.rs  build.rs  thin.rs
