[package]
name = "dyn-ptr"
version = "0.2.0"
edition = "2021"

authors = ["uselessgoddess <dodickgod@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/uselessgoddess/dyn-ptr"
homepage = "https://github.com/uselessgoddess/dyn-ptr"
description = """
A box that stores types like pointers,
forgetting everything besides `Self: Unsize<dyn Trait>`
"""
categories = ["no-std", "rust-patters", "data-structures"]
keywords = ["no_std", "box", "unsized"]

[features]
any-ptr = []
default = ["any-ptr"]

[dev-dependencies]
trybuild = "1.0"